--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,3 +36,6 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+set -g base-index 1
+setw -g pane-base-index 1
