--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .config/fish/fish_history
+.config/fish/fish_variables
 .config/fish/fishd.*
 .config/fish/functions/fzf_key_bindings.fish
 .config/configstore/
