--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@ set-option -g prefix M-s
 unbind-key C-b
 bind-key M-s send-prefix
 
+# Escaping should be fast
+set -sg escape-time 0
+
 # Set status bar
 set -g status-bg black
 set -g status-fg white
