add fzf completion to git clone
add users repos

this works, but it doesn't get any repo that is private at all

works but really slow

it kind of works

this is an iteration that actually works

add some cleanup

make message for already up-to-date repo list better

wrong sign on last update test for github repos

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
-set-option -g prefix M-s
+set-option -sg prefix M-s
 unbind-key C-b
 bind-key M-s send-prefix
 
 # Escaping should be fast
-set -sg escape-time 0
+set -sg escape-time 10
 
 # Set status bar
 set -g status-bg black
