update for tmux 2.9

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Highlight active window
-setw -g window-status-current-bg blue
+setw -g window-status-current-style bg=blue
 
 setw -g mode-keys vi
 setw -g status-keys vi
