--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,8 @@ bind-key M-s send-prefix
 set -sg escape-time 10
 
 # Set status bar
-set -g status-bg black
-set -g status-fg white
+set -g status-bg white
+set -g status-fg black
 set -g status-left '#[fg=green]#S #P'
 setw -g monitor-activity on
 set -g visual-activity on
