upgrade .tmux.conf for tmux3

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ set -g history-limit 8192
 set -g default-terminal "xterm-256color"
 
 # Better splitting
-bind \ split-window -h
+bind \\ split-window -h
 bind - split-window -v
 
 # hjkl window changing
